Render the templates and media files

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -47,7 +47,11 @@
 						<div class="row">
 							{% for post in posts %}
 								<article class="col-6 col-12-xsmall work-item">
-									<a href="{% static 'images/fulls/01.jpg' %}" class="image fit thumb"><img src="{% static 'images/thumbs/01.jpg' %}" alt="" /></a>
+									{% if post.imagem %}
+										<a href="{{ post.imagem.url }}" class="image fit thumb"><img src="{{ post.imagem.url }}" alt="" /></a>
+									{% else %}
+										<a href="{% static 'images/fulls/01.jpg' %}" class="image fit thumb"><img src="{% static 'images/thumbs/01.jpg' %}" alt="" /></a>
+									{% endif %}
 									<h3>{{ post.title }}</h3>
 									<p>{{ post.sub_title }}</p>
 									<span>{{ post.get_categories_label }}</span>
